@@ -1,5 +1,11 @@
 2005-06-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/lily-parser-scheme.cc (LY_DEFINE): don't set 'parser
+	variable in lily module
+
+	* scm/framework-ps.scm (output-classic-framework): error message
+	regarding the classic framework.
+
 	* Documentation/user/henle-flat-gray.png (Module): new file.
 
 	* Documentation/user/baer-flat-gray.png (Module): new file.
